Add some margin between things

--- a/index.njk
+++ b/index.njk
@@ -2,7 +2,7 @@
 layout: layouts/base.njk
 ---
 {%- for thing in collections.things -%}
-<div id="{{ thing.fileSlug }}" class="box columns">
+<div id="{{ thing.fileSlug }}" class="box columns mb-5">
   <div class="column">
     <h3 class="title">
       <a href="#{{ thing.fileSlug }}">
