--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container mx-auto">
-      <header class="is-flex is-flex-direction-column is-justify-content-center is-align-items-center my-6">
+      <header class="is-flex is-flex-direction-column is-justify-content-center is-align-items-center my-6 mx-5">
         <h1 class="title is-1">Shit List</h1>
         <p class="subtitle">Companies, things, or people on my shit list; the list of things I don't like.</p>
       </header>
